Added the navigation bar to the homepage and restructured it

--- a/photography.css
+++ b/photography.css
@@ -1,7 +1,15 @@
 :root {
   --font-family: "Roboto", sans-serif;
 }
-
+.navbar {
+  background-color: #202020;
+}
+.navbar-toggler {
+  background-color: white;
+}
+.navbar a {
+  color: white;
+}
 .hero-section {
   text-align: center;
   background-color: #1b1b1b;
@@ -30,8 +38,7 @@
   color: #272142;
   text-decoration: none;
 }
-.homepage-content {
-}
+
 .homepage-row img {
   height: 250px;
   margin: 20px;
@@ -50,4 +57,41 @@
 }
 .last-row-last-img {
   width: 320px;
+}
+.social-links a {
+  font-size: 16px;
+  margin: 0 12px;
+  color: black;
+  padding: 0 5px;
+  border-radius: 2px;
+  background-color: white;
+}
+.container footer {
+  padding: 20px;
+  background-color: #282323;
+}
+footer small {
+  color: white;
+}
+footer h3 {
+  color: white;
+  font-size: 22px;
+}
+.footer {
+  background-color: #282323;
+}
+@media (max-width: 995px) {
+  .card-img-overlay {
+    padding-top: 100px;
+  }
+  .hero-section h1 {
+    font-size: 40px;
+  }
+  .hero-section p {
+    font-size: 18px;
+    line-height: 1;
+  }
+  .social-links {
+    margin-bottom: 10px;
+  }
 }
