--- a/photography.css
+++ b/photography.css
@@ -29,6 +29,7 @@
   font-size: 18px;
   line-height: 1.5;
   color: white;
+  margin-bottom: 50px;
 }
 .hero-button a {
   font-size: 14px;
@@ -80,18 +81,234 @@ footer h3 {
 .footer {
   background-color: #282323;
 }
-@media (max-width: 995px) {
+@media (max-width: 1250px) {
   .card-img-overlay {
-    padding-top: 100px;
+    padding-top: 250px;
   }
   .hero-section h1 {
-    font-size: 40px;
+    font-size: 72px;
   }
   .hero-section p {
-    font-size: 18px;
-    line-height: 1;
+    line-height: 2;
+  }
+  .hero-section p {
+    margin-bottom: 30px;
+  }
+}
+@media (max-width: 1000px) {
+  .card-img-overlay {
+    padding-top: 140px;
+  }
+  .hero-section h1 {
+    font-size: 72px;
+  }
+  .hero-section p {
+    line-height: 1.3;
   }
   .social-links {
     margin-bottom: 10px;
+  }
+  .homepage-row img {
+    height: 250px;
+  }
+  .second-row {
+    width: 250px;
+  }
+  .second-row-last-img {
+    width: 250px;
+  }
+  .frst-row-last-img {
+    width: 250px;
+  }
+  .nineth-row-last-img {
+    width: 250px;
+  }
+  .last-row-last-img {
+    width: 250px;
+  }
+}
+@media (max-width: 730px) {
+  .card-img-overlay {
+    padding-top: 120px;
+  }
+  .hero-section h1 {
+    margin: 0;
+    font-size: 40px;
+  }
+  .hero-section h2 {
+    margin: 0;
+    font-size: 20px;
+  }
+
+  .hero-section p {
+    line-height: 1;
+    font-size: 15px;
+    margin-bottom: 18px;
+  }
+  .hero-button a {
+    font-size: 14px;
+    padding: 10px 15px;
+    border-radius: 30px;
+  }
+  .social-links {
+    margin-bottom: 10px;
+  }
+  .homepage-row img {
+    height: 250px;
+  }
+  .second-row {
+    width: 250px;
+  }
+  .second-row-last-img {
+    width: 250px;
+  }
+  .frst-row-last-img {
+    width: 250px;
+  }
+  .nineth-row-last-img {
+    width: 250px;
+  }
+  .last-row-last-img {
+    width: 250px;
+  }
+}
+@media (max-width: 600px) {
+  .card-img-overlay {
+    padding-top: 80px;
+  }
+  .hero-section h1 {
+    margin: 0;
+    font-size: 40px;
+  }
+  .hero-section h2 {
+    margin: 0;
+    font-size: 20px;
+  }
+  .hero-section p {
+    line-height: 1;
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+  .hero-button a {
+    font-size: 14px;
+    padding: 10px 15px;
+    border-radius: 30px;
+  }
+  .social-links {
+    margin-bottom: 10px;
+  }
+  .hero-button {
+    padding-top: 3px;
+  }
+  .homepage-row img {
+    height: 200px;
+  }
+  .second-row {
+    width: 200px;
+  }
+  .second-row-last-img {
+    width: 200px;
+  }
+  .frst-row-last-img {
+    width: 200px;
+  }
+  .nineth-row-last-img {
+    width: 200px;
+  }
+  .last-row-last-img {
+    width: 200px;
+  }
+}
+@media (max-width: 400px) {
+  .card-img-overlay {
+    padding-top: 65px;
+  }
+  .hero-section h1 {
+    margin: 0;
+    font-size: 35px;
+  }
+  .hero-section h2 {
+    margin: 0;
+    font-size: 18px;
+  }
+  .hero-section p {
+    line-height: 1;
+    font-size: 15px;
+    margin-bottom: 15px;
+  }
+  .hero-button a {
+    font-size: 14px;
+    padding: 8px 13px;
+    border-radius: 30px;
+  }
+  .social-links {
+    margin-bottom: 10px;
+  }
+  .hero-button {
+    padding-top: 3px;
+  }
+  .homepage-row img {
+    height: 200px;
+  }
+  .second-row {
+    width: 200px;
+  }
+  .second-row-last-img {
+    width: 200px;
+  }
+  .frst-row-last-img {
+    width: 200px;
+  }
+  .nineth-row-last-img {
+    width: 200px;
+  }
+  .last-row-last-img {
+    width: 200px;
+  }
+}
+@media (max-width: 399px) {
+  .card-img-overlay {
+    padding-top: 65px;
+  }
+  .hero-section h1 {
+    margin: 0;
+    font-size: 35px;
+  }
+  .hero-section h2 {
+    margin: 0;
+    font-size: 18px;
+  }
+  .hero-section p {
+    font-size: 13px;
+    margin-bottom: 15px;
+  }
+  .hero-button a {
+    font-size: 14px;
+    padding: 8px 13px;
+    border-radius: 30px;
+  }
+  .social-links {
+    margin-bottom: 10px;
+  }
+  .hero-button {
+    padding-top: 3px;
+  }
+  .homepage-row img {
+    height: 200px;
+  }
+  .second-row {
+    width: 200px;
+  }
+  .second-row-last-img {
+    width: 200px;
+  }
+  .frst-row-last-img {
+    width: 200px;
+  }
+  .nineth-row-last-img {
+    width: 200px;
+  }
+  .last-row-last-img {
+    width: 200px;
   }
 }
