--- a/photography.css
+++ b/photography.css
@@ -124,7 +124,15 @@ footer h3 {
   color: #272142;
   text-decoration: none;
 }
-
+.mobile-view-image {
+  height: 500px;
+}
+.mobile-view-section {
+  background-color: #1b1b1b;
+}
+.about-page {
+  background-color: #1b1b1b;
+}
 @media (max-width: 1250px) {
   .card-img-overlay {
     padding-top: 250px;
@@ -169,6 +177,9 @@ footer h3 {
   }
   .last-row-last-img {
     width: 250px;
+  }
+  .mobile-view-section h1 {
+    font-size: 45px;
   }
 }
 @media (max-width: 730px) {
