Edited the website

--- a/photography.css
+++ b/photography.css
@@ -15,6 +15,7 @@
 }
 body {
   font-family: var(--font-family);
+  background-color: #1b1b1b;
 }
 .hero-section {
   text-align: center;
@@ -89,6 +90,7 @@ footer h3 {
 }
 .about-section {
   background-color: #1b1b1b;
+  margin-top: 80px;
 }
 .about-section h2 {
   font-size: 20px;
@@ -140,6 +142,15 @@ footer h3 {
 .about-images img {
   height: 250px;
   margin: 20px;
+}
+.gallery-page {
+  margin-top: 80px;
+}
+
+.gallery-header {
+  font-size: 70px;
+  color: white;
+  text-align: center;
 }
 
 @media (max-width: 1250px) {
