--- a/photography.css
+++ b/photography.css
@@ -124,7 +124,7 @@ footer h3 {
 }
 .about-button a {
   font-size: 14px;
-  padding: 12px 20px;
+  padding: 15px 25px;
   border-radius: 30px;
   background-color: white;
   color: #272142;
@@ -151,6 +151,23 @@ footer h3 {
   font-size: 70px;
   color: white;
   text-align: center;
+}
+.contact-page {
+  margin-top: 80px;
+}
+.contact-header {
+  font-size: 60px;
+}
+
+.contact-section {
+  text-align: center;
+}
+h3 {
+  color: #f65282;
+}
+.mail a {
+  color: white;
+  text-decoration: none;
 }
 
 @media (max-width: 1250px) {
